--- a/complex.html
+++ b/complex.html
@@ -16,7 +16,7 @@ Functions:
 <br/>add - Adds two complex numbers together
 <br/>sub - Subtracts the second complex number from the first
 <br/>mul - Multiplies two complex numbers together
-<br/>div - Divide the first complex number by the second
+<br/>div - Divides the first complex number by the second
 <br/>pow - Raises the first complex number by the second
 <br/>
 <br/>intrpow - Raises the complex number by the real integer
