--- a/poltest.html
+++ b/poltest.html
@@ -1,8 +1,28 @@
 <html>
 <head>
+</head>
+<body>
+<div style="display:none;">
+<img id="dot" src="dot.png"><img id="line" src="line.png">
+</div>
+</body>
 <script>
-const english = ["The authority of the state should be challenged.","Whether a person has a right to do something is dependent on its legality.","Identity is something of importance.","Objectively, some living creatures have more moral worth than others.","Even through significant political disagreement, a nation should always remain united.","Whether or not it is a good thing to do, people have a right to use violence against unjustifiably violent groups.","The existence of a state can be just.","Traditionalism can be described as a 'dangerous, emotional reaction'.","Some acts that do not impact other people's lives can be considered immoral.","It is right and true that political discussions should sometimes be deliberately avoided."]
+const english = ["The authority of the state should be challenged.","One's rights are defined by the law of the jurisdiction they are under.","Identity (such as nationality, race, gender, sexuality) is something of importance.","It is an objective fact that some sentient beings have more moral worth than others.","Even through significant political disagreement, a nation should always remain united.","Whether or not it is a good thing to do, people have a right to use violence against unjustifiably violent groups.","It is possible for the existence of a state to be just.","Follwing traditions for the sake of it can be described as a 'dangerous, emotional reaction'.","Some acts that do not impact other sentient beings can be considered immoral.","It is fair that political discussions should sometimes be deliberately avoided."]
+const resus = [true, false, false, false, false, true, false, true, false, false]
+const english2 = ['Agree', 'Neutral', 'Disagree', 'Result', 'Score', 'left', 'right', '(complete centre)']
+const engdesc = "This test attempts to use a set of questions to assess whether the user is left or right wing, and to what extent. Unlike most other tests, this tries to refer to the general ideas of being left or right rather than focusing on more specific issues, which in reality cannot always be fit as nicely on this spectrum as many may believe, and many movements considered left or right are often the opposite. It therefore is possible that your result will be different to your expectations. The left can be defined as wanting to minimise social hierarchy, whereas the right can be defined as wanting to keep or increase it. Seeing these definitions alone, it can be seen that the left is generally libertarian and the right authoritarian, almost by definition. The right will also in order to protect power oppose progressive movements trying to reduce authority, and the left will support them.</br></br>This test will give you a score between 0 and 1 (0 being centre, 1 being far left or right) and a picture showing the result on a chart. If you do not understand any of the terms, please look them up, as putting Neutral or skipping a question will still have an impact on the final score. If you have any feedback or questions, please feel free to contact me using <a href='mailto:brmbrmcar.1.4913@gmail.com'>brmbrmcar.1.4913@gmail.com</a>.</br></br>"
+const agreed = english2 
 const questions = english
+const desc = engdesc
+document.body.innerHTML += desc
+var i = 0n
+while (i < 10n) {
+   var ia = resus[i] ? 'l' : 'r'
+   var ib = resus[i] ? 'r' : 'l'
+   document.body.innerHTML += "<span id='q" + i + "'>" + questions[i] +"</span></br><input type='radio' name='q" + i + "' value='Agree' id='" + ia + i +"'></input> " + agreed[0] + "</br><input type='radio' name='q" + i + "' value='Neutral'></input> " + agreed[1] + "</br><input type='radio' name='q" + i + "' value='Disagree' id='" + ib + i +"'></input> " + agreed[2] + "</br>"
+   i += 1n
+}
+document.body.innerHTML += "<input type='button' onclick='scoref()' value='" + agreed[3] + "'><span id='result'></span>"
 function scorestr(score) {
    score *= 10n
    const characters = "0123456789"
@@ -14,92 +34,28 @@ function scorestr(score) {
 }
 function scoref() {
    var score = 0n
-   if (document.getElementById("r0").checked) score += 1n
-   if (document.getElementById("r1").checked) score += 1n
-   if (document.getElementById("r2").checked) score += 1n
-   if (document.getElementById("r3").checked) score += 1n
-   if (document.getElementById("r4").checked) score += 1n
-   if (document.getElementById("r5").checked) score += 1n
-   if (document.getElementById("r6").checked) score += 1n
-   if (document.getElementById("r7").checked) score += 1n
-   if (document.getElementById("r8").checked) score += 1n
-   if (document.getElementById("r9").checked) score += 1n
-   if (document.getElementById("l0").checked) score -= 1n
-   if (document.getElementById("l1").checked) score -= 1n
-   if (document.getElementById("l2").checked) score -= 1n
-   if (document.getElementById("l3").checked) score -= 1n
-   if (document.getElementById("l4").checked) score -= 1n
-   if (document.getElementById("l5").checked) score -= 1n
-   if (document.getElementById("l6").checked) score -= 1n
-   if (document.getElementById("l7").checked) score -= 1n
-   if (document.getElementById("l8").checked) score -= 1n
-   if (document.getElementById("l9").checked) score -= 1n
-   if (!score) document.getElementById("result").innerHTML = "Score: 0.00 (complete centre)"
+   i = 0n
+   while (i < 10n) {
+      if (document.getElementById("r" + i).checked) score += 1n
+      if (document.getElementById("l" + i).checked) score -= 1n
+      i += 1n
+   }
+   const pos = ((Number(score))/questions.length + 1) * 75 - 8
+   if (!score) document.getElementById("result").innerHTML = agreed[4] + ": 0.00 " + agreed[7]
    else if (score < 0n) {
       score = -score
-      if (score == questions.length) document.getElementById("result").innerHTML = "Score: 1.00 left"
-      else document.getElementById("result").innerHTML = "Score: " + scorestr(score) + " left"
+      if (score == questions.length) document.getElementById("result").innerHTML = agreed[4] + ": 1.00 " + agreed[5]
+      else document.getElementById("result").innerHTML = agreed[4] + ": " + scorestr(score) + " " + agreed[5]
    }
    else {
-      if (score == questions.length) document.getElementById("result").innerHTML = "Score: 1.00 right"
-      else document.getElementById("result").innerHTML = "Score: " + scorestr(score) + " right"
+      if (score == questions.length) document.getElementById("result").innerHTML = agreed[4] + ": 1.00 " + agreed[6]
+      else document.getElementById("result").innerHTML = agreed[4] + ": " + scorestr(score) + " " + agreed[6]
    }
+   document.getElementById("result").innerHTML += "<canvas id='resultpic' width='150' height='45'>"
+   var resultp = document.getElementById("resultpic").getContext("2d")
+   resultp.drawImage(document.getElementById("line"), 0, 0)
+   resultp.drawImage(document.getElementById("dot"), pos, 14)
 }
+
 </script>
-</head>
-<body>
-<span id="q0"></span></br>
-<input type="radio" name="q0" value="Agree" id="l0"></input> Agree</br>
-<input type="radio" name="q0" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q0" value="Disagree" id="r0"></input> Disagree</br>
-<span id="q1"></span></br>
-<input type="radio" name="q1" value="Agree" id="r1"></input> Agree</br>
-<input type="radio" name="q1" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q1" value="Disagree" id="l1"></input> Disagree</br>
-<span id="q2"></span></br>
-<input type="radio" name="q2" value="Agree" id="r2"></input> Agree</br>
-<input type="radio" name="q2" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q2" value="Disagree" id="l2"></input> Disagree</br>
-<span id="q3"></span></br>
-<input type="radio" name="q3" value="Agree" id="r3"></input> Agree</br>
-<input type="radio" name="q3" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q3" value="Disagree" id="l3"></input> Disagree</br>
-<span id="q4"></span></br>
-<input type="radio" name="q4" value="Agree" id="r4"></input> Agree</br>
-<input type="radio" name="q4" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q4" value="Disagree" id="l4"></input> Disagree</br>
-<span id="q5"></span></br>
-<input type="radio" name="q5" value="Agree" id="l5"></input> Agree</br>
-<input type="radio" name="q5" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q5" value="Disagree" id="r5"></input> Disagree</br>
-<span id="q6"></span></br>
-<input type="radio" name="q6" value="Agree" id="r6"></input> Agree</br>
-<input type="radio" name="q6" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q6" value="Disagree" id="l6"></input> Disagree</br>
-<span id="q7"></span></br>
-<input type="radio" name="q7" value="Agree" id="l7"></input> Agree</br>
-<input type="radio" name="q7" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q7" value="Disagree" id="r7"></input> Disagree</br>
-<span id="q8"></span></br>
-<input type="radio" name="q8" value="Agree" id="r8"></input> Agree</br>
-<input type="radio" name="q8" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q8" value="Disagree"  id="l8"></input> Disagree</br>
-<span id="q9"></span></br>
-<input type="radio" name="q9" value="Agree" id="r9"></input> Agree</br>
-<input type="radio" name="q9" value="Neutral"></input> Neutral</br>
-<input type="radio" name="q9" value="Disagree" id="l9"></input> Disagree</br>
-<input type="button" onclick="scoref()" value="Result"><span id="result"></span>
-<script>
-document.getElementById("q0").innerHTML = questions[0]
-document.getElementById("q1").innerHTML = questions[1]
-document.getElementById("q2").innerHTML = questions[2]
-document.getElementById("q3").innerHTML = questions[3]
-document.getElementById("q4").innerHTML = questions[4]
-document.getElementById("q5").innerHTML = questions[5]
-document.getElementById("q6").innerHTML = questions[6]
-document.getElementById("q7").innerHTML = questions[7]
-document.getElementById("q8").innerHTML = questions[8]
-document.getElementById("q9").innerHTML = questions[9]
-</script>
-</body>
 </html>
