--- a/index.html
+++ b/index.html
@@ -1,40 +1,61 @@
+<html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
-<link href='style.css' rel='stylesheet' type='text/css'>
-<title>Good test</title>
-<link rel="icon" type="x-icon" href="icon.png">
-<link rel="shortcut icon" type="x-icon" href="icon.png">
-<meta charset="utf-8">
 </head>
 <body>
-
-<h1>Good test</h1>
-<hr>
-<button class="button" onclick="location.href='quiz.html';" style="font-size:36pt;">Click here to start!</button>
-<img src="values.svg" class="center"></img>
-    There are <b><u><span id="numOfQuestions"></span></u></b> questions in the test.</p>
-
-<h2>What are the eight values?</h2>
-    <p class="value-description"><b style="color:#d32f2f;">Good economics</b><br/>
-        Those with good economics scores are good.</p>
-    <p class="value-description"><b style="color:#00796b;">Bad economics</b><br/>
-        Those with bad economics scores are bad.</p>
-    <p class="value-description"><b style="color:#f57c00;">Nationalist</b><br/>
-        Those who are nationalists are bad and need to be bⒶshed.</p>
-    <p class="value-description"><b style="color:#0288d1;">Not nationalist</b><br/>
-        Those who aren't nationalist aren't as bad.</p>
-    <p class="value-description"><b style="color:#fbc02d;">Libertarian</b><br/>
-        Those who are libertarian are good.</p>
-    <p class="value-description"><b style="color:#303f9f;">Authoritarian</b><br/>
-        Those who are authoritarian need also to be bⒶshed.</p>
-    <p class="value-description"><b style="color:#689f38;">Bad progression</b><br/>
-        Those with bad progression scores are bad.</p>
-    <p class="value-description"><b style="color:#7b1fa2;">Good progression</b><br/>
-        Those with good progression scores are good.</p>
-
-<!-- This is the script for the page itself -->
-<script type="application/javascript"src="questions.js"></script>
-<script type="text/javascript">
-    document.getElementById("numOfQuestions").innerHTML = questions.length;
-</script>
+<div style="display:none;">
+<img id="dot" src="dot.png"><img id="line" src="line.png">
+</div>
 </body>
+<script>
+const english = ["The authority of the state should be challenged.","One's rights are defined by the law of the jurisdiction they are under.","Identity (such as nationality, race, gender, sexuality) is something of importance.","It is an objective fact that some sentient beings have more moral worth than others.","Even through significant political disagreement, a nation should always remain united.","Whether or not it is a good thing to do, people have a right to use violence against unjustifiably violent groups.","It is possible for the existence of a state to be just.","Follwing traditions for the sake of it can be described as a 'dangerous, emotional reaction'.","Some acts that do not impact other sentient beings can be considered immoral.","It is fair that political discussions should sometimes be deliberately avoided."]
+const resus = [true, false, false, false, false, true, false, true, false, false]
+const english2 = ['Agree', 'Neutral', 'Disagree', 'Result', 'Score', 'left', 'right', '(complete centre)']
+const engdesc = "This test attempts to use a set of questions to assess whether the user is left or right wing, and to what extent. Unlike most other tests, this tries to refer to the general ideas of being left or right rather than focusing on more specific issues, which in reality cannot always be fit as nicely on this spectrum as many may believe, and many movements considered left or right are often the opposite. It therefore is possible that your result will be different to your expectations. The left can be defined as wanting to minimise social hierarchy, whereas the right can be defined as wanting to keep or increase it. Seeing these definitions alone, it can be seen that the left is generally libertarian and the right authoritarian, almost by definition. The right will also in order to protect power oppose progressive movements trying to reduce authority, and the left will support them.</br></br>This test will give you a score between 0 and 1 (0 being centre, 1 being far left or right) and a picture showing the result on a chart. If you do not understand any of the terms, please look them up, as putting Neutral or skipping a question will still have an impact on the final score. If you have any feedback or questions, please feel free to contact me using <a href='mailto:brmbrmcar.1.4913@gmail.com'>brmbrmcar.1.4913@gmail.com</a>.</br></br>"
+const agreed = english2 
+const questions = english
+const desc = engdesc
+document.body.innerHTML += desc
+var i = 0n
+while (i < 10n) {
+   var ia = resus[i] ? 'l' : 'r'
+   var ib = resus[i] ? 'r' : 'l'
+   document.body.innerHTML += "<span id='q" + i + "'>" + questions[i] +"</span></br><input type='radio' name='q" + i + "' value='Agree' id='" + ia + i +"'></input> " + agreed[0] + "</br><input type='radio' name='q" + i + "' value='Neutral'></input> " + agreed[1] + "</br><input type='radio' name='q" + i + "' value='Disagree' id='" + ib + i +"'></input> " + agreed[2] + "</br>"
+   i += 1n
+}
+document.body.innerHTML += "<input type='button' onclick='scoref()' value='" + agreed[3] + "'><span id='result'></span>"
+function scorestr(score) {
+   score *= 10n
+   const characters = "0123456789"
+   var str = "0."
+   str += characters[score/BigInt(questions.length)]
+   score = (score % BigInt(questions.length))*10n
+   str += characters[score/BigInt(questions.length)]
+   return str
+}
+function scoref() {
+   var score = 0n
+   i = 0n
+   while (i < 10n) {
+      if (document.getElementById("r" + i).checked) score += 1n
+      if (document.getElementById("l" + i).checked) score -= 1n
+      i += 1n
+   }
+   const pos = ((Number(score))/questions.length + 1) * 75 - 8
+   if (!score) document.getElementById("result").innerHTML = agreed[4] + ": 0.00 " + agreed[7]
+   else if (score < 0n) {
+      score = -score
+      if (score == questions.length) document.getElementById("result").innerHTML = agreed[4] + ": 1.00 " + agreed[5]
+      else document.getElementById("result").innerHTML = agreed[4] + ": " + scorestr(score) + " " + agreed[5]
+   }
+   else {
+      if (score == questions.length) document.getElementById("result").innerHTML = agreed[4] + ": 1.00 " + agreed[6]
+      else document.getElementById("result").innerHTML = agreed[4] + ": " + scorestr(score) + " " + agreed[6]
+   }
+   document.getElementById("result").innerHTML += "<canvas id='resultpic' width='150' height='45'>"
+   var resultp = document.getElementById("resultpic").getContext("2d")
+   resultp.drawImage(document.getElementById("line"), 0, 0)
+   resultp.drawImage(document.getElementById("dot"), pos, 14)
+}
+
+</script>
+</html>
